--- a/index.html
+++ b/index.html
@@ -1,1 +1,13 @@
-Hello Workd
+<html>
+
+  <head>
+    <h1> Something Something Something Dark Side </h1>
+  </head>
+
+
+  <body>
+    <p>Sample text for eventual resume site</p>
+  </body>
+
+
+</html>
