--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
 
   <head>
+    <link rel="stylesheet" type="text/css" href="index.css">
     <h1> Something Something Something Dark Side </h1>
   </head>
 
