--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
   <head>
     <link rel="stylesheet" type="text/css" href="index.css">
-    <h1> Something Something Something Dark Side </h1>
+    <h1 class="banner"> Something Something Something Dark Side </h1>
   </head>
 
 
