--- a/index.html
+++ b/index.html
@@ -2,7 +2,13 @@
 
   <head>
     <link rel="stylesheet" type="text/css" href="index.css">
-    <h1 class="banner"> Something Something Something Dark Side </h1>
+    <div class="banner">
+      <h1> Something Something Something Dark Side </h1>
+      John McFarland </br>
+      John.McFarland.690@gmail.com </br>
+      347-261-1330 </br>
+    </div>
+
   </head>
 
 
