--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       347-261-1330 </br>
     </div>
 
-      <ul id="coolMenu">
+      <ul class="dropDown">
         <li><a href="#">Lorem</a></li>
         <li><a href="#">Mauricii</a></li>
         <li>
