--- a/index.html
+++ b/index.html
@@ -1,7 +1,10 @@
+<!DOCTYPE html>
 <html>
 
   <head>
     <link rel="stylesheet" type="text/css" href="index.css">
+
+    <title>John McFarland</title>
     <div class="banner">
       <h1> Something Something Something Dark Side </h1>
       John McFarland </br>
@@ -9,27 +12,22 @@
       347-261-1330 </br>
     </div>
 
-      <ul class="dropDown">
-        <li><a href="#">Lorem</a></li>
-        <li><a href="#">Mauricii</a></li>
-        <li>
-            <a href="#">Periher</a>
-            <ul>
-                <li><a href="#">Hellenico</a></li>
-                <li><a href="#">Genere</a></li>
-                <li><a href="#">Indulgentia</a></li>
-            </ul>
-        </li>
-        <li><a href="#">Tyrio</a></li>
-        <li><a href="#">Quicumque</a></li>
-      </ul>
-
-
   </head>
 
 
   <body>
-    <p>Sample text for eventual resume site</p>
+    <div class="navcontainer">
+      <ul class="dropDown">
+        <li><a href="#">Home</a></li>
+        <li><a href="#">Projects</a></li>
+        <li><a href="#">Commentaries</a></li>
+        <li><a href="#">About Me</a></li>
+      </ul>
+    </div>
+
+
+    <p>HELLO WORLD</p>
+
   </body>
 
 
