Centered Navbar, added a picture. (needs new one)

--- a/index.html
+++ b/index.html
@@ -5,8 +5,10 @@
     <link rel="stylesheet" type="text/css" href="index.css">
 
     <title>John McFarland</title>
+
     <div class="banner">
       <h1> Something Something Something Dark Side </h1>
+      <img class="homepic" src="pictures/mec.png" alt="John McFarland" /></br>
       John McFarland </br>
       John.McFarland.690@gmail.com </br>
       347-261-1330 </br>
@@ -14,19 +16,20 @@
 
   </head>
 
-
   <body>
-    <div class="navcontainer">
+    <!-- <div class="navcontainer"> -->
+    <div style="width:800px; margin:0 auto;">
       <ul class="dropDown">
         <li><a href="#">Home</a></li>
-        <li><a href="#">Projects</a></li>
+        <li><a href="projects.html">Projects</a></li>
         <li><a href="#">Commentaries</a></li>
         <li><a href="#">About Me</a></li>
+        <li><a href="#">Wishlist</a></li>
       </ul>
     </div>
 
 
-    <p>HELLO WORLD</p>
+
 
   </body>
 
