Changed color, added borders to buttons

--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 
     <div class="banner">
       <h1> Something Something Something Dark Side </h1>
-      <img class="homepic" src="pictures/mec.png" alt="John McFarland" /></br>
+      <img class="homepic" src="pictures/sgc.png" alt="John McFarland" /></br>
+
       John McFarland </br>
       John.McFarland.690@gmail.com </br>
       347-261-1330 </br>
