--- a/index.html
+++ b/index.html
@@ -8,11 +8,18 @@
 
     <div class="banner">
       <h1> Something Something Something Dark Side </h1>
+
+
       <img class="homepic" src="pictures/sgc.png" alt="John McFarland" /></br>
 
-      John McFarland </br>
-      John.McFarland.690@gmail.com </br>
-      347-261-1330 </br>
+      <div class="contact">
+        John McFarland </br>
+        347-261-1330 </br>
+        John.McFarland.690@gmail.com </br>
+        Bachelor of Science, Computer Science</br>
+
+      </div>
+
     </div>
 
   </head>
@@ -25,9 +32,10 @@
         <li><a href="projects.html">Projects</a></li>
         <li><a href="#">Commentaries</a></li>
         <li><a href="#">About Me</a></li>
-        <li><a href="#">Wishlist</a></li>
+        <li><a href="#">Resume</a></li>
       </ul>
     </div>
+
 
 
 
