Changed color, added text

--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
       <img class="homepic" src="pictures/sgc.png" alt="John McFarland" /></br>
 
       <div class="contact">
-        John McFarland </br>
+        john mcfarland </br>
         347-261-1330 </br>
-        John.McFarland.690@gmail.com </br>
-        Bachelor of Science, Computer Science</br>
+        john.mcfarland.690@gmail.com </br>
+        bachelor of science, computer science</br>
 
       </div>
 
